tdf#150149 sw: fix table header in multi-column sections

Disabling long repeating table header on pages resulted
lost table header within multi-column sections. To fix this,
revert commit f7e071a00542c414a7e9d7bcf4434d908f225e59
for tables in sections.

Regression from commit f7e071a00542c414a7e9d7bcf4434d908f225e59
"tdf#88496 DOCX: disable long repeating table header".

Change-Id: Idb7b9ea014be5430a185489cf449463f534c1916
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/150393
Tested-by: Jenkins
Reviewed-by: László Németh <nemeth@numbertext.org>
(cherry picked from commit 6f868961f4e6060c1cdc27710b605c936be8685a)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/150324